# FloodAdapt

./: .commitlintrc.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  FloodAdapt.code-workspace  GETTING_STARTED.md  LICENSE  Panos_tests.py  README.md  _environment.yml  about.html  build-waterinstitute.py  cliff.toml  conda_requirements.txt  config.toml  database.toml  environment.yml  environment_docs.yml  environment_teamcity.yml  formatting_tips.html  index.html  pip_requirements.txt  pixi.toml  pyproject.toml  ruff.toml  search.json  setup.bat  setup.py  setup.sh  site.toml  sonar-project.properties  test.toml  testfile.test  typos.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation_improvement.yaml  feature_request.yaml  meta_issue.yaml
.github/workflows/: auto_code_doc.yml  docs.yml  lint-pr-message.yml  lint.yml  lint_and_test.yml  prep-commit-lint-cache.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  sonar.yml  tag-event.json
.teamcity/FloodAdapt/: project-config.xml
0.1.0/: formatting_tips.html  index.html  search.json
0.1.0/1_introduction/: index.html  overview_floodadapt.html  reader_guidance.html
0.1.0/2_installation_guide/: index.html
0.1.0/3_setup_guide/: database.html  risk_analysis.html
0.1.0/4_user_guide/: benefits.html  getting_started.html  index.html  site_tab.html
0.1.0/5_update_model/: damage_functions.html  dem.html  objects.html  settings.html
0.1.0/6_demo/: measures_impact.html
1_introduction/: index.html  intended_use.html  overview_floodadapt.html  reader_guidance.html  terminology.html
1_user_guide/: benefits.html  getting_started.html  index.html  site_tab.html
1_user_guide/arc_gis/: index.html
1_user_guide/compare/: Compare_map.html  Compare_table.html  index.html
1_user_guide/events/: general_info.html  historical.html  hurricane.html  index.html  probabilistic_events.html  synthetic_events.html
1_user_guide/measures/: buildings.html  green_infra.html  hydraulic.html  index.html
1_user_guide/output/: index.html
1_user_guide/projections/: climate.html  index.html  socioEconomic.html
1_user_guide/scenario_results/: event_set.html  index.html  single_event.html
1_user_guide/scenarios/: index.html
1_user_guide/strategy/: index.html
2_installation_guide/: folder_struct.html  index.html  installation.html  software_req.html  system_req.html
2_technical_docs/: BenefitCalc.html  EquityCalc.html  EventScenario.html  RiskScenario.html  dem.html  index.html
3_api_docs/: index.html
3_api_docs/api_ref/: AggregationDmgLayer.html  AggregationModel.html  Basins.html  Benefit.html  BenefitsLayer.html  BenefitsModel.html  BuildingsInfographicModel.html  Buyout.html  ConfigModel.html  Cstype.html  CurrentSituationModel.html  CycloneTrackDatabaseModel.html  DatumModel.html  DemModel.html  Elevate.html  EquityModel.html  Event.html  EventInfographicModel.html  EventSet.html  FiatConfigModel.html  FiatModel.html  FieldMapping.html  FloodAdapt.html  FloodExceedanceModel.html  FloodFrequencyModel.html  FloodMapLayer.html  FloodModel.html  FloodProof.html  FloodWall.html  FloodmapType.html  FootprintsDmgLayer.html  FootprintsOptions.html  ForcingType.html  GreenInfrastructure.html  GuiConfigModel.html  GuiModel.html  GuiUnitModel.html  HistoricalEvent.html  HomesInfographicModel.html  HurricaneEvent.html  (+67 more)
3_api_docs/examples/: index.html
3_setup_guide/: database.html  gui.html  index.html  risk_analysis.html
3_setup_guide/Delft_Fiat/: hydromt_fiat_gui.html  index.html
3_setup_guide/SFINCS/: hydromt_sfincs_gui.html  index.html
4_system_setup/: database.html  index.html  risk_analysis.html
4_user_guide/: benefits.html  getting_started.html  index.html  site_tab.html  user_interface.html
4_user_guide/arc_gis/: index.html
4_user_guide/compare/: Compare_map.html  index.html  (+1 more)
5_technical_docs/: BenefitCalc.html  EquityCalc.html  EventScenario.html  RiskScenario.html  dem.html  index.html
5_update_model/: aggregation_areas.html  damage_functions.html  dem.html  index.html  objects.html  settings.html
6_demo/: army_corps.html  index.html  king_tides.html  measures_impact.html
api_ref/: Benefit.html  Buyout.html  CurrentSituationModel.html  Database.html  DbsBenefit.html  DbsEvent.html  DbsMeasure.html  DbsProjection.html  DbsScenario.html  DbsStatic.html  DbsStrategy.html  DbsTemplate.html  Elevate.html  Event.html  EventSet.html  FiatAdapter.html  FloodAdapt.html  FloodAdaptLogging.html  FloodProof.html  FloodWall.html  ForcingType.html  GreenInfrastructure.html  HistoricalEvent.html  HurricaneEvent.html  IForcing.html  Measure.html  MeasureType.html  Mode.html  Object.html  PhysicalProjection.html  Projection.html  Pump.html  Scenario.html  SelectionType.html  Settings.html  SfincsAdapter.html  Site.html  SocioEconomicChange.html  Strategy.html  SubEventModel.html  (+67 more)
api_reference/: HOW_TO_BUILD.md
api_wiki/: make.bat
database_builder/: create_database.py
dev_docs/: HOW_TO_BUILD.md  conf.py
distribution/: build_database_builder_executable.py
docs/: .gitignore  _make_pdf.qmd  _quarto.yml  api.py  clean_database.py  clean_notebook_output.py  docs_publishing_workflow.yml  environment_docs.yml  fetch_data.py  formatting_tips.qmd  index.qmd  merge_sidebars.py  user_documentation.yml  version.py
environment/: _environment.yml  install_rust.bat  make_environment.py  write_env_yml.py
examples/: database_builder.ipynb  example1.html  index.html
flood_adapt/: __init__.py  config.py  config.toml  database.py  database_builder.py  dbs_controller.py  flood_adapt.py  log.py  run_pyreverse.py  testfile.py  tmp.py
model_builder/: build_FA.py
tests/: conftest.py  fixtures.py  generate_test_models.py  test_config.py  test_config_io.py  test_database.py  test_database_builder.py  test_flood_adapt.py  test_hazard_measure.py  test_object_model_event.py  test_object_model_projections.py  test_object_model_strategies.py  test_scenario.py  test_site.py  test_utils.py  updateSVN.bat  updateSVN.py  utils.py
(+1765 files in other folders)
