[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flood-adapt"
description = "A software package support system which can be used to assess the benefits and costs of flood resilience measures"
readme = "README.md"
authors = [
    { name = "Gundula Winter", email = "Gundula.Winter@deltares.nl" },
    { name = "Panos Athanasiou", email = "Panos.Athanasiou@deltares.nl" },
    { name = "Frederique de Groen", email = "Frederique.deGroen@deltares.nl" },
    { name = "Tim de Wilde", email = "Tim.deWilde@deltares.nl" },
    { name = "Julian Hofer", email = "Julian.Hofer@deltares.nl" },
    { name = "Daley Adrichem", email = "Daley.Adrichem@deltares.nl" },
    { name = "Luuk Blom", email = "Luuk.Blom@deltares.nl" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.8,<3.13"

# Any package below will be taken from pypi.
# These are ignored if any packages is also defined in the section: [tool.pixi.dependencies]
dependencies = [
    "cht-cyclones",
    "cht-meteo",
    "cht-observations",
    "cht-tide",
    "dask<2024.7.0",  # The last version that still supports pandas 1.x, which we need until fiat-toolbox and noaa_cops become compatible with pandas 2.x
    "fiat-toolbox==0.1.16",
    "fiona",
    "geojson",
    "geopandas",
    "jellyfish<1.0",  # This is a dependency of us->hydromt-fiat, FloodAdapt doesnt use it directly. Remove when .whl files are available.
    # jellyfish v1.0 starts requiring rust as a dependency, which is fine if there are built .whl files. BUT THERE ARE NO BUILDS FOR WINDOWS YET.
    "hydromt-fiat==0.5.2",
    "hydromt-sfincs@ git+https://github.com/Deltares/hydromt_sfincs.git",
    "numpy < 2.0",
    "numpy-financial",
    "pandas",
    "plotly",
    "pydantic",
    "pydantic-settings",
    "pyogrio",
    "setuptools",
    "tomli",
    "tomli-w",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit == 3.8.0",
    "ruff       == 0.5.5",
    "typos      == 1.23.6",
]

build = ["build", "twine"]
docs = ["jupyter", "jupyter-cache", "matplotlib", "quartodoc", "regex"]
all = ["flood-adapt[build,dev,docs]"]

[project.urls]
Source = "https://github.com/Deltares-research/FloodAdapt"

### setuptools ###
[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic.version]
attr = "flood_adapt.__version__"

[tool.setuptools.packages.find]
include = ["flood_adapt", "flood_adapt.*"]

[tool.setuptools.package-data]
flood_adapt = ["py.typed", "database_builder/**"]

### pytest ###
[tool.pytest.ini_options]
addopts = "--junitxml report.xml --cov flood_adapt --cov-report html --cov-fail-under 70"
testpaths = ["tests"]


### pixi ###
[tool.pixi.pypi-dependencies]
flood_adapt = {path = ".", editable = true }

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.project]
name = "flood-adapt"
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.environments]
py312 = { features = ["py312"], solve-group = "py312" }
py311 = { features = ["py311"], solve-group = "py311" }
py310 = { features = ["py310"], solve-group = "py310" }

build = { features = ["build"], solve-group = "py311" }
dev = { features = ["dev"], solve-group = "py311" }
docs = { features = ["docs"], solve-group = "py311" }
all = { features = ["all"], solve-group = "py311" }

[tool.pixi.feature.dev.tasks]
install-pre-commit = {cmd = "pre-commit install", outputs=[".git/hooks/pre-commit"]}
pre-commit = {cmd = "pre-commit run --all-files", depends-on=["install-pre-commit"]}
tests = {cmd = "pytest tests"}
